pythonファイルとDBの追加、list.html動作確認済

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
     <title>クーポンガーディアン</title>
 </head>
 <body>
-    
+    <h1>TOPログイン</h1>
+    <form action="/" method="POST">
+        名前：<input type="text" name="name">
+        パスワード：<input type="password" name="password">
+        <input type="submit" name="save" value="ログイン">
+    </form>
 </body>
 </html>
