--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,14 @@
     <!-- FontAwesomeのCDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- リセットCSSのCDN -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@4.0.0/destyle.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@4.0.0/destyle.css">
     <!-- stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" media="screen (max-width:768px )">
 </head>
+
 <body>
+
     <header class="header">
         <h1 class="app-title"><a href="/">クーポンガーディアン</a></h1>
         <div class="member-menu">
@@ -20,5 +23,6 @@
     </header>
     {% block content %}
     {% endblock %}
+
 </body>
 </html>
