クーポン追加・削除ルーティング、ログアウト実装

--- a/templates/add.html
+++ b/templates/add.html
@@ -11,15 +11,15 @@
                     <table>
                       <tr>
                             <th>店名</th>
-                            <td><input type="text" /></td>
+                            <td><input type="text" name="shop_name"/></td>
                       </tr>
                       <tr>
                          <th>クーポン名</th>
-                            <td><input type="password" /></td>
+                            <td><input type="text" name="coupon_name"/></td>
                       </tr>
                       <tr>
                         <th>有効期限</th>
-                           <td><input type="password" /></td>
+                           <td><input type="text" name="expiration"/></td>
                      </tr>
                     </table>
                 </div>
