--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <header class="header">
         <h1 class="app-title"><a href="/">クーポンガーディアン</a></h1>
         <div class="member-menu">
-            <a href="" class="menu-link">ログアウト</a>
+            <a href="/logout" class="menu-link">ログアウト</a>
         </div>
     </header>
     {% block content %}
