ログインページ、クーポン追加ページ

--- a/templates/add.html
+++ b/templates/add.html
@@ -10,33 +10,20 @@
 
                     <table>
                       <tr>
-                            <th>店名</th>
-                            <td><input type="text" /></td>
+                            <th class="name">店名</th>
+                            <td><input type="text" class="input"></td>
                       </tr>
                       <tr>
-                         <th>クーポン名</th>
-                            <td><input type="password" /></td>
+                            <th class="name">クーポン名</th>
+                            <td><input type="password" class="input"></td>
                       </tr>
                       <tr>
-                        <th>有効期限</th>
-                           <td><input type="password" /></td>
+                            <th class="name">有効期限</th>
+                            <td><input type="password" class="input"></td>
                      </tr>
                     </table>
                 </div>
-
-                <!-- <div class="item">
-                    <label for="shop">店名</label>
-                    <label for="coupon">クーポン名</label>
-                    <label for="coupon">有効期限</label>
-                </div> -->
-
-                <!-- ここに有効期限のラベルと入力欄 -->
-                <!-- <div class="item">
-                    <input type="text" id="shop" name="shop">
-                    <input type="text" id="coupon" name="coupon">
-                    <input type="text" id="time" name="time">
-                </div> -->
-
+                
             </div>
             <!-- ここにキャンセルボタン -->
             <div class="primary">
