--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@ input {
 
 /* フォーム */
 .form{
-    padding: 20px;
+    padding: 20px 20px 20px 35px;
     border-top-left-radius: 4px;
     background-color: #fff;
     box-shadow: 0px 1px 6px #b7b6b6;
@@ -52,9 +52,13 @@ input {
     font-size: 12px;
 }
 
-/* .item{
-    padding: 0px 5px;
-} */
+.item{
+    padding: 0px 2px;
+}
+
+.input{
+    margin: 2px 10px;
+}
 
 .item label{
     padding: 5px;
@@ -66,7 +70,7 @@ input {
 }
 
 .input-item{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: row;
 }
@@ -98,8 +102,10 @@ input {
     background-color: #ff4538;
     color: #fff;
     margin: 0px 20px;
-    width: 80px;
+    padding:0px 5px;
+    width: 85px;
     height: 20px;
+    text-align: center;
 }
 
 .primary{
@@ -108,7 +114,7 @@ input {
 }
 
 .btn-secondary{
-    border: 1px solid #ff3548;
+    border: 1px solid #ff4538;
     background-color: #fff;
     color: #ff4538;
 }
@@ -124,7 +130,7 @@ input {
 .page-head{
     margin-top: 120px;
     margin-bottom: 60px;
-    color: #ff3548;
+    color: #ff4538;
     font-size: 24px;
     text-align: center;
 }
@@ -148,13 +154,17 @@ input {
     margin-bottom: 30px;
     border-radius: 4px;
     background-color: #ffffff;
-    box-shadow: 0px 1px 6px #cccccc;
+    box-shadow: 0px 1px 6px #bebebe;
 }
 
 .task-title{
     margin-bottom: 15px;
     color: #333333;
     line-height: 1.5;
+}
+
+.expiration{
+    color: #ff4538;
 }
 
 .icon-wrap{
@@ -167,7 +177,7 @@ input {
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    background-color: #ff3548;
+    background-color: #ff4538;
     text-align: center;
     line-height: 32px;
 }
@@ -175,4 +185,11 @@ input {
 .fa-pen,.fa-trash{
     color: #ffffff;
     font-size: 14px;
+}
+
+/* index.html */
+.input-user{
+    height: 20px;
+    width: 150px;
+    margin: 5px;
 }
