日付の昇順並び替え、inputタグ修正

--- a/templates/add.html
+++ b/templates/add.html
@@ -11,15 +11,15 @@
                     <table>
                       <tr>
                             <th class="name">店名</th>
-                            <td><input type="text" class="input"></td>
+                            <td><input type="text" name="shop_name" class="input"></td>
                       </tr>
                       <tr>
                             <th class="name">クーポン名</th>
-                            <td><input type="password" class="input"></td>
+                            <td><input type="text" name="coupon_name" class="input"></td>
                       </tr>
                       <tr>
                             <th class="name">有効期限</th>
-                            <td><input type="password" class="input"></td>
+                            <td><input type="date" name="expiration" class="input"></td>
                      </tr>
                     </table>
                 </div>
