--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
             <table>
                 <tr>
                       <th class="name">名前</th>
-                      <td><input type="text" class="input-user"></td>
+                      <td><input type="text" name="name" class="input-user"></td>
                 </tr>
                 <tr>
                       <th class="name">パスワード</th>
-                      <td><input type="password" class="input-user"></td>
+                      <td><input type="password" name="password" class="input-user"></td>
                 </tr>
             </table>
             
