--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,7 +139,13 @@ input {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 90px;
+    /* margin-bottom: 90px; */
+    margin: 50px 0;
+}
+
+/* 幅を明示 */
+.coupon-wrap{
+    width: 350px;
 }
 
 .card-wrap{
@@ -150,11 +156,15 @@ input {
 
 .card{
     width: 100%;
-    padding: 30px;
+    /* padding: 30px; */
+    padding: 10px 20px; /* paddingを微調整 */
     margin-bottom: 30px;
     border-radius: 4px;
     background-color: #ffffff;
     box-shadow: 0px 1px 6px #bebebe;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .task-title{
