--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,7 +177,7 @@ input {
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    background-color: #ff4538;
+    background-color: #FFC331;
     text-align: center;
     line-height: 32px;
 }
