--- a/templates/list.html
+++ b/templates/list.html
@@ -12,7 +12,7 @@
                 <!-- ここに有効期限 -->
                 <p class="expiration">有効期限：{{item["expiration"]}}</p>
                 <div class="icon-wrap">
-                    <a href="" class="circle"><i class="fa-solid fa-trash"></i></a>
+                    <a href="/delete/{{task['id']}}" class="circle"><i class="fa-solid fa-trash"></i></a>
                 </div>
             </div>
             {% endfor %}
