--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,6 +143,16 @@ input {
     margin: 50px 0;
 }
 
+/* リスト　ボタンスタイル */
+.fa-plus{
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    background-color: #FF4538;
+    text-align: center;
+    line-height: 42px;
+}
+
 /* 幅を明示 */
 .coupon-wrap{
     width: 350px;
