--- a/templates/list.html
+++ b/templates/list.html
@@ -16,7 +16,9 @@
                 </div>
             </div>
             {% endfor %}
-            <a href="/add">クーポン追加</a>
+            <div class="plus">
+                <a href="/add"><i class="fa-solid fa-plus" style="color: #fff;"></i></a>
+            </div>
         </div>
     </div>
 </main>
