ボタン追加

--- a/templates/list.html
+++ b/templates/list.html
@@ -12,6 +12,7 @@
                     <p class="expiration">有効期限：{{item["expiration"]}}</p>
                 </d>
                 <div class="icon-wrap">
+                    <a href="#" class="circle"><i class="fa-solid fa-pen" style="color: #ffffff;"></i></a>
                     <a href="/del/{{item['id']}}" class="circle"><i class="fa-solid fa-trash"></i></a>
                 </div>
             </div>
