--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,7 +197,7 @@ input {
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    background-color: #FFC331;
+    background-color: #ffc331;
     text-align: center;
     line-height: 32px;
 }
