--- a/templates/list.html
+++ b/templates/list.html
@@ -18,8 +18,10 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="plus">
-                <a href="/add"><i class="fa-solid fa-plus" style="color: #fff;"></i></a>
+            <div class="btn-fixed">
+                <div class="plus">
+                    <a href="/add"><i class="fa-solid fa-plus" style="color: #fff;"></i></a>
+                </div>
             </div>
         </div>
     </div>
