--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,13 +20,19 @@ input {
 
 /* ヘッダー */
 .header{
+    height: 80px;
+    width: 100%;
+    background-color: #ff4538;
+    position: fixed;
+    top: 0;
+}
+
+.header-container{
+    max-width: 350px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 70px;
-    width: 100%;
-    padding: 0 10%;
-    background-color: #ff4538;
+    margin: 0 auto;
 }
 
 .app-title{
@@ -38,17 +44,22 @@ input {
 
 .menu-link{
     color: #ffffff;
-} 
+}
 
+main{
+    margin-top: 130px;
+}
+
+/* index.html */
 /* フォーム */
 .form{
-    padding: 20px 20px 20px 35px;
+    /* padding: 20px 20px 20px 35px; */
+    padding: 20px;
+    width: 300px;
+    margin: 50px auto;
     border-top-left-radius: 4px;
     background-color: #fff;
     box-shadow: 0px 1px 6px #b7b6b6;
-    height: 140px;
-    width: 300px;
-    margin: 10%;
     font-size: 12px;
 }
 
@@ -58,6 +69,7 @@ input {
 
 .input{
     margin: 2px 10px;
+    margin: 5px 0 5px 5px;
 }
 
 .item label{
@@ -70,9 +82,11 @@ input {
 }
 
 .input-item{
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: row;
+    margin-bottom: 20px;
+}
+
+.input-item table{
+    margin: 0 auto;
 }
 
 .input-item input{
@@ -83,6 +97,16 @@ input {
 .input-item label{
     display: block;
     margin-bottom: 4px;
+}
+
+.input-item .name{
+    line-height: 30px;
+}
+
+.input-user{
+    height: 20px;
+    width: 150px;
+    margin: 5px 0 5px 5px;
 }
 
 /* ボタンスタイル */
@@ -101,7 +125,7 @@ input {
 .btn-primary{
     background-color: #ff4538;
     color: #fff;
-    margin: 0px 20px;
+    margin: 0px 10px;
     padding:0px 5px;
     width: 85px;
     height: 20px;
@@ -111,6 +135,8 @@ input {
 .primary{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .btn-secondary{
@@ -146,6 +172,21 @@ input {
 }
 
 /* add　ボタンスタイル */
+.btn-fixed{
+    position: fixed;
+    bottom: 20px;
+    width: 360px;
+}
+
+.plus{
+    width: 42px;
+    margin-left: auto;
+}
+
+.plus a{
+    display: block;
+}
+
 .fa-plus{
     width: 42px;
     height: 42px;
@@ -211,13 +252,6 @@ input {
 }
 
 .fa-pen,.fa-trash{
-    /* color: #ffffff; */
+    color: #ffffff;
     font-size: 14px;
-}
-
-/* index.html */
-.input-user{
-    height: 20px;
-    width: 150px;
-    margin: 5px;
 }
