--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,12 @@
 <body>
 
     <header class="header">
-        <h1 class="app-title"><a href="/">クーポンガーディアン</a></h1>
-        <div class="member-menu">
-            <a href="/logout" class="menu-link">ログアウト</a>
-        </div>
+        <d class="header-container">
+            <h1 class="app-title"><a href="/">クーポンガーディアン</a></h1>
+            <div class="member-menu">
+                <a href="/logout" class="menu-link">ログアウト</a>
+            </div>
+        </d>
     </header>
     {% block content %}
     {% endblock %}
