--- a/templates/add.html
+++ b/templates/add.html
@@ -25,9 +25,8 @@
                 </div>
                 
             </div>
-            <!-- ここにキャンセルボタン -->
             <div class="primary">
-                <input type="submit" value="キャンセル" class="btn btn-primary">
+                <a class="btn btn-primary" href="/list">キャンセル</a>
                 <input type="submit" value="クーポン追加" class="btn btn-primary">
             </div>
         </form>
