--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,8 +31,16 @@ input {
     height: 80px;
     width: 100%;
     background-color: #ff4538;
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
+}
+
+.header-container{
+    width: 350px; /* max-widthからwidthに変更 */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 .app-title{
@@ -47,6 +55,11 @@ input {
 } 
 
 /* フォーム */
+.loginbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .form{
     padding: 20px 20px 20px 35px;
     border-top-left-radius: 4px;
